add font family to the params for video creation

--- a/lib/rendering/render.html
+++ b/lib/rendering/render.html
@@ -29,7 +29,7 @@
         .karaoke-caption {
             font-size: 20pt;
             padding-top: 175px;
-            font-family: CAPTION_FONT_FAMILY;
+            font-family: "CAPTION_FONT_FAMILY";
             font-weight: 300;
             margin: 0px 46px;
             width: 628px;
